@@ -1,5 +1,15 @@
 2003-01-11  Hironori SAKAMOTO <hsaka@mth.biglobe.ne.jp>
 
+	* [w3m-dev 03622] Re: Error occured while reset
+	* file.c (uncompress_stream): child process initialized
+	* terms.c (close_tty): close unless stdin,out,err
+		(reset_tty): flush_tty, close_tty
+		(write1): flush_tty
+		(refresh): flush_tty
+		(flush_tty): check ttyf
+
+2003-01-11  Hironori SAKAMOTO <hsaka@mth.biglobe.ne.jp>
+
 	* [w3m-dev 03620] -m option and header
 	* buffer.c (reshapeBuffer): fix reading from stdin
 				fix -m option
